# python-fastApi-auth

./: .env.example  .gitignore  Dockerfile  README.md  TODOs.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  lessons-learned.md  pyproject.toml  requirements.txt  start.sh
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 0fa8ea7235fb_add_user_table.py
api-test/: README.md  test-auth.sh
app/: main.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: user.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/users/: router.py  schemas.py  service.py
data/: .gitkeep
logs/: .gitkeep
tests/: README.md  conftest.py  test_auth.py  test_users.py
