[project]
name = "python-fastapi-auth"
version = "0.1.0"
description = "FastAPI authentication service"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.8",
    "gunicorn==23.0.0",
    "uvicorn==0.34.0",
    "SQLAlchemy>=2.0.40",
    "psycopg[binary]==3.3.2",
    "alembic==1.14.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "email-validator>=2.0.0",
    "python-jose==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "httpx==0.28.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
